--- a/src/features/home/components/WhySection/style.css
+++ b/src/features/home/components/WhySection/style.css
@@ -1,11 +1,10 @@
-/* 1. التغليف والمسافة الخارجية - لا تغيير هنا */
+
 .section-container-wrapper {
-    padding: 60px 0; /* زيادة المسافة لتناسب الدوائر الأكبر */
+    padding: 60px 0; 
     display: flex; 
     justify-content: center; 
 }
 
-/* 2. مربع المحتوى الأبيض (النقطة المرجعية للدوائر) - لا تغيير هنا */
 .why-termbi-content-box {
     background-color: white;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05); 
@@ -15,8 +14,6 @@
     position: relative; 
     overflow: hidden; }
 
-
-/* 3. الخصائص المشتركة للدوائر (قبل وبعد) - لا تغيير هنا */
 .why-termbi-content-box::before,
 .why-termbi-content-box::after {
     content: "";
@@ -42,11 +39,9 @@
     bottom: -20px; 
     right: -20px;
 }
-.termbi-image-in-title{
+.termbi-logo{
     height: 0.9em;
 }
-
-
 
 .why-red {
     color: rgba(236, 35, 35, 1);
